[build-system]
requires = ["flit-core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "asyncache"
version = "0.3.1"
description = "Helpers to use cachetools with async code."
authors = [{ name = "hephex", email = "figus.federico@gmail.com" }]
license = "MIT"
readme = "README.rst"
requires-python = ">=3.9"
dependencies = ["cachetools>=5.2.0"]

[dependency-groups]
dev = [
    "black",
    "mypy",
    "pytest",
    "isort",
    "pylint",
    "Sphinx",
    "sphinx-rtd-theme",
    "types-cachetools",
]

[tool.isort]
profile = "black"
